--- a/src/main.css
+++ b/src/main.css
@@ -55,25 +55,44 @@
 
 
 /* END OF RESET */
+
+:root {
+  --shadow-color: 0deg 0% 0%;
+  --shadow-elevation-medium:
+    0px 0.7px 0.9px hsl(var(--shadow-color) / 0.06),
+    0px 2.6px 3.3px -0.5px hsl(var(--shadow-color) / 0.09),
+    0px 5.9px 7.5px -1px hsl(var(--shadow-color) / 0.11),
+    0.1px 13.3px 17px -1.5px hsl(var(--shadow-color) / 0.13);
+}
+
 body {
     height: 100vh;
     font-family: sans-serif;
+    overflow: hidden;
+}
+
+#app {
+  height: 100vh;
 }
 
 .top-container {
     background-image: url(/images/pattern-bg-desktop.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
     color:  white;
     display: grid;
     place-items: center;
     padding: 1.5rem 1.5rem 5rem 1.5rem;
+    height: 25vh;
 }
 
 .input-container{
     display: flex;
     justify-content: center;
     width: 37%;
-    position: relative;
     padding-bottom: 10px;
+    position: relative;
     input {
         border: none;
         width: 100%;
@@ -101,18 +120,60 @@ body {
     padding: 1.5rem;
     border-radius: 15px;
     position: absolute;
-    top: 19%;
+    top: 75%;
     z-index: 1;
+    box-shadow: var(--shadow-elevation-medium);
+    margin-inline: 3rem;
+
     span {
-        color: #2C2C2C;
+        color: grey;
+        font-weight: bold;
     }
     h2 {
         color: black;
+        font-size: 1.2rem;
+    }
+
+    #location-container {
+      flex-shrink: 10;
     }
 }
 
 #map {
-    height: 65vh;
-    bottom: 0;
+    min-height: 75vh;
     z-index: 0;
+}
+
+@media only screen and (max-width: 767px) {
+  .info-container {
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    width: 80%;
+    padding: 1rem;
+    top: 70%;
+
+    h2{
+      font-size: 1.1rem;
+    }
+
+  }
+
+  .header {
+    font-size: 1.7rem;
+  }
+
+  .input-container {
+    width: 90%;
+
+    input {
+      font-size: 0.9rem;
+    }
+
+    input::placeholder {
+      font-size: 0.8rem;
+    }
+  }
+
+
 }
