--- a/src/main.css
+++ b/src/main.css
@@ -110,6 +110,7 @@ body {
         right: 0;
         border-end-end-radius: 15px;
         border-start-end-radius: 15px;
+        cursor: pointer;
     }
 }
 
