more relative paths

--- a/src/main.css
+++ b/src/main.css
@@ -76,7 +76,7 @@ body {
 }
 
 .top-container {
-    background-image: url(/images/pattern-bg-desktop.png);
+    background-image: url(./images/pattern-bg-desktop.png);
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
