--- a/src/main.css
+++ b/src/main.css
@@ -102,7 +102,7 @@ body {
         padding-left: 10px;
     }
 
-    button {
+    #submit {
         border: none;
         background-color: black;
         color: white;
